--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,12 @@
-<nav class="flex justify-between bb b--white-10 bg-black-90">
-  <a class="link white-70 hover-white no-underline flex items-center pa3" href="/">
-    Cousinsd
-  </a>
-  <div class="flex-grow pa3 flex items-center">
-    <a class="f6 link dib white dim mr3 mr4-ns" href="/gallery">Projects</a>
-    <a class="f6 link dib white dim mr3 mr4-ns" href="/quotes">Quotes</a>
-    <a class="f6 link dib white dim mr3 mr4-ns" href="/documents">Organics</a>
-  </div>
-</nav>
+<header class="bg-black-90 fixed w-100 ">
+  <nav class="flex justify-between bb b--white-10 bg-black-90">
+    <a class="link white-70 hover-white no-underline flex items-center pa3" href="/">
+      Cousinsd
+    </a>
+    <div class="flex-grow pa3 flex items-center">
+      <a class="f6 link dib white dim mr3 mr4-ns" href="/gallery">Projects</a>
+      <a class="f6 link dib white dim mr3 mr4-ns" href="/quotes">Quotes</a>
+      <a class="f6 link dib white dim mr3 mr4-ns" href="/documents">Organics</a>
+    </div>
+  </nav>
+</header>
